# fCAD

./: CMakeLists.txt  README.md
kCAD/: CMakeLists.txt
kCAD/api/: CMakeLists.txt
kCAD/api/exec/: main.cpp
kCAD/api/kernel/: CMakeLists.txt
kCAD/api/kernel/include/: main_window.h
kCAD/api/kernel/src/: main_window.cpp
kCAD/api/kernel/ui/: main_window.ui
kCAD/utility/: CMakeLists.txt
kCAD/utility/include/: logger.h  singleton.h  types.h
kCAD/utility/src/: utility.cpp
